--- a/.github/workflows/staging-workflows.yml
+++ b/.github/workflows/staging-workflows.yml
@@ -10,7 +10,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: 'Tableau Workbook Action' #This workflows expected to be error since no secrets vars provided
-        uses: jayamanikharyono/tableau-workbook-action@v1.4
+        uses: ./
         env:
           USERNAME: ${{ secrets.USERNAME }}
           PASSWORD: ${{ secrets.PASSWORD }}
