--- a/tests/workbooks/workbooks.yml
+++ b/tests/workbooks/workbooks.yml
@@ -1,7 +1,7 @@
 workbooks:
     - name: film_workbook
       file_path: film_workbooks.twb
-      project_path: test_tableau/test1
+      project_path: tableau_test/test1
       option:
         tags:
           - sample
