--- a/tests/workbooks/workbooks.yml
+++ b/tests/workbooks/workbooks.yml
@@ -1,13 +1,13 @@
 workbooks:
-    - name: film_workbook
-      file_path: film_workbooks.twb
+    - name: testing_1
+      file_path: testing_1.twb
       project_path: tableau_git/contoh_1
       option:
         tags:
           - sample
           - temp
         hidden_views:
-          - Event by day
+          - 
         show_tabs: true
         description: Sample description
 
