--- a/tests/workbooks/workbooks.yml
+++ b/tests/workbooks/workbooks.yml
@@ -1,19 +1,12 @@
 workbooks:
-    - name: film_workbook
-      file_path: film_workbook.twb
-      project_path: Dashboard/Film
-    - name: full_multi_view_workbook
-      file_path: film_workbook.twb
-      project_path: Dashboard/Film
-    - name: multi_view_workbook
-      file_path: film_workbook.twb
-      project_path: Dashboard/Film
+    - name: testing_1
+      file_path: testing_1.twb
+      project_path: tableau_git/contoh_1
       option:
         tags:
           - sample
           - temp
         hidden_views:
-          - Event by day
         show_tabs: true
         description: Sample description
 
