--- a/tests/workbooks/workbooks.yml
+++ b/tests/workbooks/workbooks.yml
@@ -12,7 +12,7 @@ workbooks:
         show_tabs: true
         description: Sample description
     - name: testing_2
-      file_path: nrt_gbv_hotel.twb
+      file_path: nrt_gbv_hotel.twbx
       project_path: tableau_git/contoh_1
       option:
         tags:
