--- a/tests/workbooks/workbooks.yml
+++ b/tests/workbooks/workbooks.yml
@@ -11,15 +11,16 @@ workbooks:
         - Details Item (2)
         show_tabs: true
         description: Sample description
-    - name: testing_2
+    - name: NRT Hotel GBV
       file_path: nrt_gbv_hotel.twbx
-      project_path: tableau_git/contoh_1
+      project_path: tableau_git/contoh_1 #Operational/Accomodation
       option:
         tags:
           - gbv hotel
           - nrt
           - test
         hidden_views:
+        - gbv per city
         show_tabs: true
         description: Sample description
     - name: testing_3
