--- a/tests/workbooks/workbooks.yml
+++ b/tests/workbooks/workbooks.yml
@@ -1,7 +1,7 @@
 workbooks:
     - name: Hotel GBV test
       file_path: nrt_gbv_hotel_2.twbx
-      project_path: contoh_1 
+      project_path: tableau_git/contoh_1 
       option:
         tags:
           - gbv hotel
