create new folder in tableau server

--- a/tests/workbooks/workbooks.yml
+++ b/tests/workbooks/workbooks.yml
@@ -40,8 +40,8 @@ workbooks:
         show_tabs: true
         
     - name: Finance Omset Event
-      file_path: Finance Admin.twbx
-      project_path: tableau_git/contoh_1 
+      file_path: Finance Admin Event.twbx
+      project_path: tableau_git/contoh_2 
       option:
         tags:
           - Adi
