--- a/tests/workbooks/workbooks.yml
+++ b/tests/workbooks/workbooks.yml
@@ -50,6 +50,17 @@ workbooks:
         hidden_views:
         - Omset Event Details
         show_tabs: true
+    - name: wb embedded
+      file_path: wb_embedded_data.twbx
+      project_path: tableau_git/contoh_2 
+      option:
+        tags:
+          - test twb
+          - finance
+          - test
+        hidden_views:
+      
+        show_tabs: true
         
     
         
