--- a/.github/workflows/prod-worklfows_partner.yml
+++ b/.github/workflows/prod-worklfows_partner.yml
@@ -1,4 +1,4 @@
-name: Tableau Workbook Production Workflows
+name: Tableau Workbook Production Workflows - Server Partner
 on:
   pull_request:
       branches:
@@ -8,7 +8,7 @@ on:
         - 'tests/workbooks/**'
 jobs:
   tableau-production-deployments:
-    name: Tableau Workbook Production Deployments
+    name: Tableau Workbook Production Deployments to Partner Server
     runs-on: ubuntu-latest
     if: github.event.pull_request.merged == true
     steps:
