--- a/.github/workflows/staging-workflows_partner.yml
+++ b/.github/workflows/staging-workflows_partner.yml
@@ -5,7 +5,7 @@ on:
         - master
 jobs:
   tableau-validation-action:
-    name: Tableau Workbook Staging Publisher
+    name: Tableau Workbook Staging Publisher to Partner Server
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
