--- a/tests/workbooks/workbooks.yml
+++ b/tests/workbooks/workbooks.yml
@@ -81,6 +81,17 @@ workbooks:
         hidden_views:
 
         show_tabs: true
+    - name: dashboard 1
+      file_path: wb_embedded_data.twbx
+      project_path: tableau_git/contoh_5
+      option:
+        tags:
+          - Indradi Khalid Maulana
+          - test twb in folder
+          - test
+        hidden_views:
+
+        show_tabs: true
   
     
         
