--- a/tests/workbooks/workbooks.yml
+++ b/tests/workbooks/workbooks.yml
@@ -89,6 +89,7 @@ workbooks:
         tags:
           - test twb
           - test
+          - indradi
         hidden_views:
       
         show_tabs: true
