--- a/.github/workflows/prod-worklfows.yml
+++ b/.github/workflows/prod-worklfows.yml
@@ -5,7 +5,7 @@ on:
         - master
       types: [closed]
       paths:
-        - 'tests/workbooks/**'
+        - 'tests/workbooks/Kagebunshin/**'
 jobs:
   tableau-production-deployments:
     name: Tableau Workbook Production Deployments
@@ -23,6 +23,6 @@ jobs:
           SITE_ID: ${{ secrets.SITE_ID }}
           TABLEAU_URL: ${{ secrets.TABLEAU_URL }}
         with:
-          workbook_dir: tests/workbooks
+          workbook_dir: tests/workbooks/Kagebunshin
           env: production
           repo_token: ${{ secrets.GITHUB_TOKEN }}
