--- a/.github/workflows/staging-workflows.yml
+++ b/.github/workflows/staging-workflows.yml
@@ -19,7 +19,7 @@ jobs:
           SITE_ID: ${{ secrets.SITE_ID }}
           TABLEAU_URL: ${{ secrets.TABLEAU_URL }}
         with:
-          workbook_dir: tests/workbooks/Kagebunshin
+          workbook_dir: tests/workbooks
           env: staging
           repo_token: ${{ secrets.GITHUB_TOKEN }}
   
