--- a/.github/workflows/prod-worklfows.yml
+++ b/.github/workflows/prod-worklfows.yml
@@ -23,6 +23,6 @@ jobs:
           SITE_ID: ${{ secrets.SITE_ID }}
           TABLEAU_URL: ${{ secrets.TABLEAU_URL }}
         with:
-          workbook_dir: tests/workbooks/Kagebunshin
+          workbook_dir: tests/workbooks
           env: production
           repo_token: ${{ secrets.GITHUB_TOKEN }}
