update prod workflows

--- a/.github/workflows/prod-worklfows_partner.yml
+++ b/.github/workflows/prod-worklfows_partner.yml
@@ -23,6 +23,6 @@ jobs:
           SITE_ID_PARTNER: ${{ secrets.SITE_ID_PARTNER }}
           TABLEAU_URL_PARTNER: ${{ secrets.TABLEAU_URL_PARTNER}}
         with:
-          workbook_dir: tests/workbooks
+          workbook_dir: tests/workbooks/Partner
           env: production
           repo_token: ${{ secrets.GITHUB_TOKEN }}
