--- a/tests/workbooks/workbooks.yml
+++ b/tests/workbooks/workbooks.yml
@@ -95,7 +95,7 @@ workbooks:
       
         show_tabs: true
     - name: test wb 3
-      file_path: testing_.twbx
+      file_path: testing_2.twbx
       project_path: tableau_git/contoh_3 
       partner_server: True
       option:
