--- a/tests/workbooks/workbooks.yml
+++ b/tests/workbooks/workbooks.yml
@@ -109,7 +109,7 @@ workbooks:
     - name: test wb 4
       file_path: testing_partner.twbx
       project_path: tableau_git/contoh_4 
-      partner_server: False
+      partner_server: True
       option:
         tags:
           - test twb 2
@@ -121,7 +121,7 @@ workbooks:
     - name: test internal
       file_path: testing_internal.twbx
       project_path: tableau_git/contoh_4 
-      partner_server: False
+      partner_server: True
       option:
         tags:
           - test twb 2
