--- a/.github/workflows/prod-worklfows_partner.yml
+++ b/.github/workflows/prod-worklfows_partner.yml
@@ -5,7 +5,7 @@ on:
         - master
       types: [closed]
       paths:
-        - 'tests/workbooks/Partner/**'
+        - 'tests/workbooks/partner/**'
 jobs:
   tableau-production-deployments:
     name: Tableau Workbook Production Deployments to Partner Server
@@ -23,6 +23,6 @@ jobs:
           SITE_ID_PARTNER: ${{ secrets.SITE_ID_PARTNER }}
           TABLEAU_URL_PARTNER: ${{ secrets.TABLEAU_URL_PARTNER}}
         with:
-          workbook_dir: tests/workbooks/Partner
+          workbook_dir: tests/workbooks/partner
           env: production
           repo_token: ${{ secrets.GITHUB_TOKEN }}
