--- a/.github/workflows/staging-workflows_partner.yml
+++ b/.github/workflows/staging-workflows_partner.yml
@@ -4,7 +4,7 @@ on:
       branches:
         - master
       paths:
-        - 'tests/workbooks/partner/**'
+        - 'tableau/workbooks/partner/**'
 jobs:
   tableau-validation-action:
     name: Tableau Workbook Staging Publisher to Server Partner
@@ -19,6 +19,6 @@ jobs:
           SITE_ID_PARTNER: ${{ secrets.SITE_ID_PARTNER }}
           TABLEAU_URL_PARTNER: ${{ secrets.TABLEAU_URL_PARTNER }}
         with:
-          workbook_dir: tests/workbooks/partner
+          workbook_dir: tableau/workbooks/partner
           env: staging
           repo_token: ${{ secrets.GITHUB_TOKEN }}
