--- a/tableau/workbooks/workbooks.yml
+++ b/tableau/workbooks/workbooks.yml
@@ -1,6 +1,6 @@
 workbooks:
     - name: test wb
-      file_path: Partner/wb_embedded_data.twbx
+      file_path: wb_embedded_data.twbx
       project_path: tableau_git/contoh_2 
       partner_server: True
       option:
