--- a/tableau/workbooks/workbooks.yml
+++ b/tableau/workbooks/workbooks.yml
@@ -69,7 +69,7 @@ workbooks:
         hidden_views:
       
         show_tabs: true
-    - name: test adi published lfs
+    - name: test published lfs
       file_path: wb_published_data.twbx
       project_path: tableau_git/contoh_4 
       partner_server: False
