--- a/tableau/workbooks/transport&cs_workbooks.yml
+++ b/tableau/workbooks/transport&cs_workbooks.yml
@@ -23,7 +23,7 @@ workbooks:
       
         show_tabs: true
     - name: '[test] wb_indradi'
-      file_path: UAT_trial_indradi_2.twbx
+      file_path: '[UAT]_trial_indradi_2.twbx'
       project_path: UAT/indradi
       partner_server: False
       option:
