--- a/.github/workflows/prod-worklfows.yml
+++ b/.github/workflows/prod-worklfows.yml
@@ -20,7 +20,7 @@ jobs:
         env:
           USERNAME:  ${{ secrets.USERNAME }}
           PASSWORD: ${{ secrets.PASSWORD }}
-          SITE_ID: ''
+          SITE_ID: ${{ secrets.SITE_ID }}
           TABLEAU_URL: ${{ secrets.TABLEAU_URL }}
         with:
           workbook_dir: tableau/workbooks/internal(kagebunshin)
