Update cloud connection

--- a/.github/workflows/prod-worklfows.yml
+++ b/.github/workflows/prod-worklfows.yml
@@ -25,4 +25,5 @@ jobs:
         with:
           workbook_dir: tableau/workbooks/internal(kagebunshin)
           env: production
+          tableau_type: server
           repo_token: ${{ secrets.GITHUB_TOKEN }}
