--- a/.github/workflows/staging-workflows.yml
+++ b/.github/workflows/staging-workflows.yml
@@ -21,5 +21,6 @@ jobs:
         with:
           workbook_dir: tableau/workbooks/internal(kagebunshin)
           env: staging
+          tableau_type: server
           repo_token: ${{ secrets.GITHUB_TOKEN }}
   
